docs: add documentation for show tags
